--- a/NSITE-ACS-Project.ipynb
+++ b/NSITE-ACS-Project.ipynb
@@ -292,7 +292,7 @@
    "outputs": [],
    "source": [
     "# Load the data sets\n",
-    "acs_data = pd.read_csv('./data/usa_00006.csv')\n",
+    "acs_data = pd.read_csv('usa_00006.csv')\n",
     "\n",
     "# Preprocess\n",
     "# Map the variable number to a descriptions\n",
