--- a/NSITE-ACS-Project.ipynb
+++ b/NSITE-ACS-Project.ipynb
@@ -387,7 +387,7 @@
     "#                50: \"Bicycle\",\n",
     "#                60: \"Walked only\",\n",
     "\n",
-    "for k in [10, 20, 31, 39, 50, 60]:\n",
+    "for k in [10, 20, 31, 50, 60]:\n",
     "    print(\"Analysis of \", tranwork_desc[k])\n",
     "    # Plot the two stacked distributions\n",
     "    fig, (ax1, ax2) = plot_stacked_log_normals(acs_data, mode_type=k, show=True)"
